crates/plotnik-vm/src/engine/snapshots/plotnik_lib__engine__engine_tests__anchor_last_child.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Q = (program (function_declaration) @last .)
---
function first() {} function second() {}
---
{
  "last": {
    "kind": "function_declaration",
    "text": "function second() {}",
    "span": [
      20,
      40
    ]
  }
}
