crates/plotnik-vm/src/engine/snapshots/plotnik_lib__engine__engine_tests__anchor_last_child_with_trivia.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Q = (program (function_declaration) @last .)
---
function first() {} function second() {} /* trailing comment */
---
{
  "last": {
    "kind": "function_declaration",
    "text": "function second() {} /* trailing comment */",
    "span": [
      20,
      63
    ]
  }
}
