crates/plotnik-vm/src/engine/snapshots/plotnik_lib__engine__engine_tests__capture_string_annotation.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Q = (program (lexical_declaration (variable_declarator name: (identifier) @name :: string)))
---
let myVar = 1
---
{
  "name": "myVar"
}
