crates/plotnik-vm/src/engine/snapshots/plotnik_lib__engine__engine_tests__quantifier_nongreedy_star.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Q = (program (lexical_declaration (variable_declarator)*? @decls))
---
let a, b
---
{
  "decls": []
}
