crates/plotnik-vm/src/engine/snapshots/plotnik_lib__engine__engine_tests__quantifier_plus_with_string_annotation.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Q = (program (expression_statement (array (identifier)+ @names :: string)))
---
[a, b, c]
---
{
  "names": [
    "a",
    "b",
    "c"
  ]
}
